--- a/inClass3/bookCarousel.css
+++ b/inClass3/bookCarousel.css
@@ -1,7 +1,20 @@
 html {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  /*display: inline-block;
-  margin: auto;
-  width: 50%;
-  text-align: center;*/
+}
+
+h2 {
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+}
+
+img {
+  margin-bottom: 100px;
+}
+
+#information {
+  margin-top: 175px;
+  width: 70%;
 }
