worked on more styling

--- a/AJAX-JSON-FamilyAndFriend/familyandfriends.css
+++ b/AJAX-JSON-FamilyAndFriend/familyandfriends.css
@@ -7,14 +7,28 @@ body {
   border: solid 3px red;
   display: inline-block;
   margin: auto;
-  margin-left: 300px;
-  margin-top: 75px;
   width: 50%;
   padding: 20px;
 }
 
+label {
+  font-weight: bold;
+}
+
+.search-stuff {
+  border: solid 3px blue;
+  padding: 15px;
+}
+
 table {
-  align-content: center;
-  margin-left: 175px;
-  padding: 20px;
+  border: solid 3px purple;
+  padding: 15px;
+  width: 75%;
+  text-align: center;
+  margin: auto;
+}
+
+th {
+  font-size: 20px;
+  padding: 5px;
 }
