--- a/Carousel/carousel.css
+++ b/Carousel/carousel.css
@@ -1,20 +1,37 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
 html {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h2 {
-  text-align: center;
-}
-
-h4 {
-  text-align: center;
+  font-size: 30px;
 }
 
 img {
   margin-bottom: 100px;
+  border-radius: 50%;
 }
 
 #information {
   margin-top: 175px;
-  width: 70%;
+  margin-left: 40px;
+  width: 48%;
+  padding: 10px;
+}
+
+table {
+  text-align: center;
+  padding-right: 25px;
+  margin: 10px;
+  margin-bottom: -270px;
+}
+
+#prev,
+#next {
+  color: orangered;
+  border: solid 2px darkgrey;
+  background-color: lightgray;
+  padding: 15px;
+  border-radius: 10%;
 }
